add getSubscriptions route
